results/SVCOMP/specgen/log-CharSequenceToString-2024_02_25_02_49_22.txt
public class CharSequenceToString {
    //@ requires arg != null;
    //@ requires arg instanceof CharSequence;
    //@ ensures \result <==> (\result == -1 || \result == 5);
    public static boolean main(String arg) {
        CharSequence cs = (CharSequence) arg;
        String s = cs.toString();
        int i = -1;
        if (s.equals("case1")) i = cs.length();
        return i == -1 || i == 5;
    }
}
#
# There is insufficient memory for the Java Runtime Environment to continue.
# Native memory allocation (mmap) failed to map 38797312 bytes for committing reserved memory.
# An error report file with more information is saved as:
# /home/max/Documents/JMLGPT/hs_err_pid8906.log

public class CharSequenceToString {
    //@ requires arg != null;
    //@ requires arg instanceof CharSequence;
    //@ ensures \result <==> (\result == -1 || \result == 5);
    public static boolean main(String arg) {
        CharSequence cs = (CharSequence) arg;
        String s = cs.toString();
        int i = -1;
        if (s.equals("case1")) i = cs.length();
        return i == -1 || i == 5;
    }
}
/home/max/Documents/JMLGPT/tmp/CharSequenceToString.java:4: error: incomparable types: boolean and int
    //@ ensures \result <==> (\result == -1 || \result == 5);
                                      ^
/home/max/Documents/JMLGPT/tmp/CharSequenceToString.java:4: error: incomparable types: boolean and int
    //@ ensures \result <==> (\result == -1 || \result == 5);
                                                       ^
2 errors

public class CharSequenceToString {
    //@ requires arg != null;
    //@ requires arg instanceof CharSequence;
    //@ ensures \result == -1 || \result == 5;
    public static boolean main(String arg) {
        CharSequence cs = (CharSequence) arg;
        String s = cs.toString();
        int i = -1;
        if (s.equals("case1")) i = cs.length();
        return i == -1 || i == 5;
    }
}
#
# There is insufficient memory for the Java Runtime Environment to continue.
# Native memory allocation (mmap) failed to map 15728640 bytes for committing reserved memory.
# An error report file with more information is saved as:
# /home/max/Documents/JMLGPT/hs_err_pid9180.log

public class CharSequenceToString {
    //@ requires arg != null;
    //@ requires arg instanceof CharSequence;
    //@ ensures \result == -1 || \result == 5;
    public static boolean main(String arg) {
        CharSequence cs = (CharSequence) arg;
        String s = cs.toString();
        int i = -1;
        if (s.equals("case1")) i = cs.length();
        return i == -1 || i == 5;
    }
}
#
# There is insufficient memory for the Java Runtime Environment to continue.
# Native memory allocation (mmap) failed to map 20971520 bytes for committing reserved memory.
# An error report file with more information is saved as:
# /home/max/Documents/JMLGPT/hs_err_pid9336.log

public class CharSequenceToString {
    //@ requires arg != null;
    //@ requires arg instanceof CharSequence;
    //@ ensures \result == -1 || \result == 5;
    public static boolean main(String arg) {
        CharSequence cs = (CharSequence) arg;
        String s = cs.toString();
        int i = -1;
        if (s.equals("case1")) i = cs.length();
        return i == -1 || i == 5;
    }
}
/home/max/Documents/JMLGPT/tmp/CharSequenceToString.java:4: error: incomparable types: boolean and int
    //@ ensures \result == -1 || \result == 5;
                        ^
/home/max/Documents/JMLGPT/tmp/CharSequenceToString.java:4: error: incomparable types: boolean and int
    //@ ensures \result == -1 || \result == 5;
                                         ^
2 errors

public class CharSequenceToString {
    //@ requires arg != null;
    //@ requires arg instanceof CharSequence;
    //@ ensures \result == -1 || \result == 5;
    public static boolean main(String arg) {
        CharSequence cs = (CharSequence) arg;
        String s = cs.toString();
        int i = -1;
        if (s.equals("case1")) i = cs.length();
        return i == -1 || i == 5;
    }
}
#
# There is insufficient memory for the Java Runtime Environment to continue.
# Native memory allocation (mmap) failed to map 26214400 bytes for committing reserved memory.
# An error report file with more information is saved as:
# /home/max/Documents/JMLGPT/hs_err_pid9519.log

public class CharSequenceToString {
    //@ requires arg != null;
    //@ requires arg instanceof CharSequence;
    //@ ensures \result == -1 || \result == 5;
    public static boolean main(String arg) {
        CharSequence cs = (CharSequence) arg;
        String s = cs.toString();
        int i = -1;
        if (s.equals("case1")) i = cs.length();
        return i == -1 || i == 5;
    }
}
/home/max/Documents/JMLGPT/tmp/CharSequenceToString.java:4: error: incomparable types: boolean and int
    //@ ensures \result == -1 || \result == 5;
                        ^
/home/max/Documents/JMLGPT/tmp/CharSequenceToString.java:4: error: incomparable types: boolean and int
    //@ ensures \result == -1 || \result == 5;
                                         ^
2 errors

public class CharSequenceToString {
    //@ requires arg != null;
    //@ requires arg instanceof CharSequence;
    //@ ensures \result == -1 || \result == 5;
    public static boolean main(String arg) {
        CharSequence cs = (CharSequence) arg;
        String s = cs.toString();
        int i = -1;
        if (s.equals("case1")) i = cs.length();
        return i == -1 || i == 5;
    }
}
#
# There is insufficient memory for the Java Runtime Environment to continue.
# Native memory allocation (mmap) failed to map 27262976 bytes for committing reserved memory.
# An error report file with more information is saved as:
# /home/max/Documents/JMLGPT/hs_err_pid9829.log

public class CharSequenceToString {
    //@ requires arg != null;
    //@ requires arg instanceof CharSequence;
    //@ ensures \result == -1 || \result == 5;
    public static boolean main(String arg) {
        CharSequence cs = (CharSequence) arg;
        String s = cs.toString();
        int i = -1;
        if (s.equals("case1")) i = cs.length();
        return i == -1 || i == 5;
    }
}
#
# There is insufficient memory for the Java Runtime Environment to continue.
# Native memory allocation (mmap) failed to map 15728640 bytes for committing reserved memory.
# An error report file with more information is saved as:
# /home/max/Documents/JMLGPT/hs_err_pid9863.log

public class CharSequenceToString {
    //@ requires arg != null;
    //@ requires arg instanceof CharSequence;
    //@ ensures \result == -1 || \result == 5;
    public static boolean main(String arg) {
        CharSequence cs = (CharSequence) arg;
        String s = cs.toString();
        int i = -1;
        if (s.equals("case1")) i = cs.length();
        return i == -1 || i == 5;
    }
}
/home/max/Documents/JMLGPT/tmp/CharSequenceToString.java:4: error: incomparable types: boolean and int
    //@ ensures \result == -1 || \result == 5;
                        ^
/home/max/Documents/JMLGPT/tmp/CharSequenceToString.java:4: error: incomparable types: boolean and int
    //@ ensures \result == -1 || \result == 5;
                                         ^
2 errors

public class CharSequenceToString {
    //@ requires arg != null;
    //@ requires arg instanceof CharSequence;
 
    public static boolean main(String arg) {
        CharSequence cs = (CharSequence) arg;
        String s = cs.toString();
        int i = -1;
        if (s.equals("case1")) i = cs.length();
        return i == -1 || i == 5;
    }
}

